<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">思维导图</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="registerShow">手机码:</string>
    <string name="EmptyValue" />
    <string name="registerCopy">复制手机码</string>
    <string name="registerText">输入注册码:</string>
    <string name="registerTextShow">在此输入获取的注册码</string>
    <string name="zhantie">粘贴</string>
    <string name="app_register">注册</string>
    <string name="registerBack">返回</string>
    <string name="registerClear">清除注册信息</string>
    <string name="pingMuJieTu">截图</string>

</resources>