<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/registerShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/registerInput"
        android:layout_alignParentTop="true"
        android:text="@string/registerShow" 
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/registerCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/registerInput"
        android:layout_below="@id/registerShow"
        android:layout_marginTop="8.0dip"
        android:text="@string/EmptyValue" 
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/registerCopy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/registerInput"
        android:layout_below="@id/registerCode"
        android:layout_marginTop="8.0dip"
        android:text="@string/registerCopy" />

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/registerInput"
        android:layout_below="@id/registerCopy"
        android:layout_marginTop="8.0dip"
        android:text="@string/registerText"
        android:textColor="@color/black"
         />

    <EditText
        android:id="@+id/registerInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8.0dip"
        android:hint="@string/registerTextShow" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/zhantie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/registerInput"
        android:layout_below="@id/registerInput"
        android:layout_marginTop="8.0dip"
        android:text="@string/zhantie" />

    <Button
        android:id="@+id/app_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerInput"
        android:layout_marginLeft="8.0dip"
        android:layout_marginTop="8.0dip"
        android:layout_toRightOf="@id/zhantie"
        android:text="@string/app_register" />

    <Button
        android:id="@+id/registerBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/app_register"
        android:layout_marginLeft="8.0dip"
        android:layout_toRightOf="@id/app_register"
        android:text="@string/registerBack" />

    <Button
        android:id="@+id/registerClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/zhantie"
        android:layout_below="@id/zhantie"
        android:layout_marginTop="8.0dip"
        android:text="@string/registerClear" />

    <TextView
        android:id="@+id/registerTiShi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/zhantie"
        android:layout_below="@id/registerClear"
        android:layout_marginTop="8.0dip"
        android:text="@string/EmptyValue" />

</RelativeLayout>